# vkFast

./: LICENSE  README.md  dependencies.txt  vkfast.c  vkfast.h  vkfast_ex.h  vkfast_ids.h
examples/00 Hello Compute/: .gitignore  add.cs.h  add.cs.hlsl  main.c
examples/00 Hello Compute/cmake-bazzite-steamos/: CMakeLists.txt
examples/00 Hello Triangle/: main.c
examples/01 GLFW Test/: .gitignore  add.cs.h  add.cs.hlsl  main.c
examples/02 150 Lines Of Code/: main.c
examples/03 Multiple Contexts/: main.c
examples/04 GLFW Two Windows Drawing/: .gitignore  main.c
examples/05 Banzai/: add.cs.h  add.cs.hlsl  main.c
examples/06 Mandelbrot set CPU/: main.c
examples/07 Ray Tracing Triangle CPU/: .gitignore  main.cpp
examples/08 RT Triangle Textured CPU/: .gitignore  main.cpp  texture.ppm
examples/09 RT Triangle Textured CPU Without GLM/: .gitignore  main.c
examples/10 RT 3D Mesh Suzanne Head CPU AVX2/: .gitignore  main.cpp
examples/11 Banzai Extra Memory Allocations/: .gitignore  main.c
examples/12 RT 3D Mesh Suzanne Head CPU Slow/: main.cpp
examples/13 RT 3D Mesh Stanford Bunny CPU Slow/: main.cpp
examples/14 RT 3D Mesh Stanford Bunny CPU Slow BVH/: main.cpp
examples/15 RT 3D Mesh Suzanne GPU RR 2.0/: .gitignore  main.cpp
examples/16 RT 3D Mesh Suzanne GPU RR 2.0 Low Level/: main.cpp
examples/17 REII Command List/: .gitignore  main.c  mesh.vs.h
examples/18 REII Multisampling/: main.c  mesh.hlsl
examples/19 REII Translation/: main.c  mesh.hlsl  mesh.vs.h
examples/20 REII Rotation/: main.c
examples/21 REII Instancing/: main.c  mesh.vs.h
examples/22 REII Texture/: .gitignore  main.c  mesh.vs.h
examples/23 REII Dear ImGui 2016/: .gitignore  main.c  mesh.fs.h  mesh.hlsl
examples/24 REII Texture From Disk/: .gitignore  main.c  mesh.fs.h  mesh.hlsl
examples/25 REII Embree Suzanne Head/: embree_rgb_float32_to_bgra8.cs.h  embree_rgb_float32_to_bgra8.cs.hlsl  main.cpp  mesh.hlsl  mesh.vs.h
examples/26 REII Immediate 3D Meshes/: .gitignore  main.c  mesh.fs.h
examples/27 REII Blender Simple Importer 1.0/: main.c
examples/28 REII BSI 1.0 SRT Xforms/: blender.c  main.c  mesh.vs.h  meshes.c
examples/29 REII Present Stutter Catcher/: .gitignore  main.c  mesh.hlsl
examples/29 REII Present Stutter Catcher/cmake-bazzite-steamos/: CMakeLists.txt
examples/30 Ray Denoising/: main.cpp
examples/30 Ray Denoising/cmake/: CMakeLists.txt
examples/31 Ray GPU Presents/: main.cpp  ray_copy_pixels.cs.h  ray_copy_pixels.cs.hlsl
examples/31 Ray GPU Presents/cmake/: CMakeLists.txt
examples/32 Toy Path Tracer CPU/: .gitignore  main.cpp
examples/33 RT 3D Mesh Stanford Bunny CPU Slow BVH Part 2/: .gitignore  main.cpp
examples/Common/: .gitignore  font_droid_sans_mono.c  mdqinc_SDL_GameControllerDB_gamecontrollerdb_txt.h  tool_git_reset_vcxproj_files.txt  vkfast_examples_common.h
extra/: .gitignore
extra/32-Bit 3D Rig Skinning REII Example/: .gitignore  main.c  skinning_math.h  skinning_skeleton.h  vs2012.vcxproj
extra/3D Mesh Stanford Bunny/: 3d_mesh_vertices_stanford_bunny.h
extra/Arc/: LICENSE  arc  arc.cpp  arc.h  arc_compiler.cpp  arc_compiler_common.h  arc_compiler_common_stage1.h  arc_compiler_stage1.cpp  arc_compiler_stage1_pass1.inl  arc_compiler_stage1_pass2.inl  arc_compiler_stage1_pass3.inl  arc_compiler_stage1_pass4.inl  arc_compiler_stage1_pass5.inl  arc_compiler_stage2.cpp  arc_rawbuild.inl  arc_stage1.inl  arc_stage2.inl  tbbtros_compiler.cpp
extra/Banzai/: vkfast_extra_banzai.c  vkfast_extra_banzai.h  vkfast_extra_banzai_pointer.c  vkfast_extra_banzai_pointer.h
extra/Blender Simple Exporter 1.0/: GenerateCameraHeaders.txt  GenerateMeshHeaders.txt
extra/Build vkFast as a library/: .gitignore  build-linux-bazzite-steamos.txt  build.txt  build_debug.txt
extra/CPU GPU Array/: vkfast_extra_cpu_gpu_array.c  vkfast_extra_cpu_gpu_array.h
extra/Dear ImGui 2016/: cimgui.cpp  cimgui.h  drawList.cpp  fontAtlas.cpp  imgui.commit  imgui.cpp  imgui.h  imgui_megafile.cpp  imgui_reii.h  imgui_shader.fs.h  imgui_shader.hlsl  imgui_shader.vs.h
extra/GLFW3 to SDL3/: LICENSE  vkfast_extra_glfw3_to_sdl3.h
extra/Modified RadeonRays 2.0/: LICENSE.txt  base_pipeline_manager.cpp  base_pipeline_manager.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  bvh2l_IntersectAny2L.spv  bvh2l_IntersectClosestRC2L.comp  bvh2l_IntersectClosestRC2L.spv  bvh2lstrategy.cpp  bvh2lstrategy.h  bvh_IntersectAny.spv  bvh_IntersectClosestRC.spv  bvhstrategy.cpp  bvhstrategy.h  calc.cpp  calc.h  calc_buffer.h  calc_device.h  calc_intersection_device.cpp  calc_intersection_device.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compile_spv.txt  compute_pipeline_manager.cpp  compute_pipeline_manager.h  debug.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_group.cpp  descriptor_set_group.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  (+43 more)
extra/Modified TinyBVH/: README.md  git_commit.txt  tiny_bvh.h  tinybvh_commit_4b5b649f1_ct_tlas_relative_to_camera_from_13_Dec_2025.patch
extra/Modified Vulkan/: git_commit.txt
extra/Modified profile/: LICENSE  profile.cpp  profile.h  profile.s
extra/Orochi 2024/: git_commit.txt
extra/Orochi 2024 Test Program/: .gitignore  main.cpp  main.vcxproj
extra/REDGPU RTE/: .gitignore  nvpro_core_29_May_2026_commit_7bb287cd8.patch  nvpro_core_29_May_2026_commit_7bb287cd8_third_party_tinygltf.patch  redgpu_rte.cpp  (+2 more)
extra/REDGPU RTE Raw/redgpu_rte/: CMakeLists.txt  redgpu_rte.cpp  redgpu_rte.vcxproj
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/: commit.txt
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/imgui/: imgui_helper.cpp
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/imgui/backends/: imgui_vk_extra.cpp
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/nvh/: parametertools.cpp
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/nvp/: nvpsystem_win32.cpp
extra/REDGPU RTE Raw/redgpu_rte/nvpro_core/nvvkhl/: appbase_vkpp.cpp  application.cpp
extra/REDGPU RTE Raw/redgpu_rte/vk_mini_path_tracer/vk_mini_path_tracer/shaders/: raytrace.comp.glsl.spv
(+229 files in other folders)
